--- a/src/app/dbz/components/list/list.component.html
+++ b/src/app/dbz/components/list/list.component.html
@@ -1,6 +1,17 @@
 <h4>Listado</h4>
 <ul class="list-group">
-  <li *ngFor="let character of characterList" class="list-group-item">
+  <!-- Info acerca del ngFor: https://angular.io/api/common/NgFor -->
+  <li *ngFor="
+    let character of characterList;
+    let i = index;
+    let isFirst = first;
+    let isLast = last;
+    let isEven = even;
+    let isOdd = odd;
+  "
+    class="list-group-item">
+
+    <span class="text-primary"> {{ i + 1 }}.</span>
     <span>{{ character.name }} - </span>
     <strong>Power: </strong>
     <span>{{ character.power}}</span>
