--- a/src/app/dbz/components/add-character/add-character.component.html
+++ b/src/app/dbz/components/add-character/add-character.component.html
@@ -1,5 +1,5 @@
 <h4>Agregar personaje</h4>
-<form class="row">
+<form class="row" (ngSubmit)="emitCharacter()">
   <input
     type="text"
     [(ngModel)]="character.name"
@@ -19,7 +19,6 @@
   <button
     class="btn btn-primary"
     type="submit"
-    (click)="emitCharacter()"
   >
     Agregar
   </button>
