--- a/src/app/dbz/pages/main-page.component.html
+++ b/src/app/dbz/pages/main-page.component.html
@@ -9,7 +9,7 @@
   </div>
 
   <div class="col">
-    <dbz-add-character></dbz-add-character>
+    <dbz-add-character (onNewChracter)="onNewCharacter($event)"></dbz-add-character>
   </div>
 
 </div>
