--- a/src/app/dbz/pages/main-page.component.html
+++ b/src/app/dbz/pages/main-page.component.html
@@ -5,12 +5,12 @@
 <div class="row">
 
   <div class="col">
-    <dbz-list [characterList]="dbzService.characters"
-              (onDelete)="dbzService.deleteCharacterById($event)"></dbz-list>
+    <dbz-list [characterList]="characters"
+              (onDelete)="onDeleteCharacter($event)"></dbz-list>
   </div>
 
   <div class="col">
-    <dbz-add-character (onNewChracter)="dbzService.onNewCharacter($event)"></dbz-add-character>
+    <dbz-add-character (onNewChracter)="onNewChracter($event)"></dbz-add-character>
   </div>
 
 </div>
